--- a/config.toml
+++ b/config.toml
@@ -7,11 +7,12 @@ enable-magisk-update = true   # set this to false if you do not want to receive 
 # you can use rvmm-config-gen to generate a config
 
 [YouTube]
-build-mode = "both"
-excluded-patches = ""
-included-patches = ""
 version = "auto"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
+arch = "arm64-v8a"
+build-mode = "both"
+excluded-patches = "'Theme' 'Disable player popup panels' 'Tablet mini player' 'Hide autoplay button' 'Hide captions button' 'Hide player buttons' 'Hide cast button' 'Alternative thumbnails' 'Enable tablet layout' 'Comments' 'Hide info cards' 'Hide endscreen cards' 'Disable fullscreen ambient mode' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Wide searchbar' 'GmsCore support'"
 
 [Music]
 build-mode = "both"
