--- a/config.toml
+++ b/config.toml
@@ -1,23 +1,25 @@
 logging-to-file = true        # enables logging of every patch process to a seperate file
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
-
+# patches-source = "revanced/revanced-patches" # where to fetch patches bundle from. default: "revanced/revanced-patches"
+# integrations-source = "revanced/revanced-integrations" # where to fetch integrations from. default: "revanced/revanced-integrations"
+cli-source = "j-hc/revanced-cli" # where to fetch cli from. default: "j-hc/revanced-cli"
+# options like cli-source can also set per app
+rv-brand = "ReVanced Extended" # rebrand from 'ReVanced' to something different. default: "ReVanced"
 # add 'enabled = false' for not patching a specific app or remove it from the config
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
 
 # you can use rvmm-config-gen to generate a config
 
 [YouTube]
+enabled = false
+patches-source = "inotia00/revanced-patches"
+integrations-source = "inotia00/revanced-integrations"
 version = "auto"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
-apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
+# apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 arch = "arm64-v8a"
 build-mode = "both"
-excluded-patches = "'Theme' 'Disable player popup panels' 'Tablet mini player' 'Hide autoplay button' 'Hide captions button' 'Hide player buttons' 'Hide cast button' 'Alternative thumbnails' 'Enable tablet layout' 'Comments' 'Hide info cards' 'Hide endscreen cards' 'Disable fullscreen ambient mode' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Wide searchbar' 'GmsCore support'"
-
-[Music]
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-arch = "both"
+excluded-patches = "'Theme' 'Disable player popup panels' 'Tablet mini player' 'Hide autoplay button' 'Hide captions button' 'Hide player buttons' 'Hide cast button' 'Alternative thumbnails' 'Enable tablet layout' 'Comments' 'Hide info cards' 'Hide endscreen cards' 'Disable fullscreen ambient mode' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Wide searchbar'"
 
 [Music-Extended]
 app-name = "Music"
@@ -36,6 +38,7 @@ integrations-source = "inotia00/revanced-integrations"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
+# arch = "arm64-v8a"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 
 [Twitter]
@@ -43,9 +46,11 @@ build-mode = "apk"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
 
 [Twitch]
+enabled = false
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
 
 [TikTok]
+enabled = false
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 
 [Reddit]
