--- a/config.toml
+++ b/config.toml
@@ -40,9 +40,10 @@ rv-brand = "ReVanced Extended"
 build-mode = "both"
 # arch = "arm64-v8a"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+excluded-patches = "'Theme' 'Disable player popup panels' 'Tablet mini player' 'Hide autoplay button' 'Hide captions button' 'Hide player buttons' 'Hide cast button' 'Alternative thumbnails' 'Enable tablet layout' 'Comments' 'Hide info cards' 'Hide endscreen cards' 'Disable fullscreen ambient mode' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Wide searchbar'"
 
 [Twitter]
-build-mode = "apk"
+#build-mode = "apk"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
 
 [Twitch]
